--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,9 @@ redis==3.3.11
 requests==2.22.0
 Scrapy==1.8.0
 scrapy-redis==0.6.8
+scrapy-splash==0.7.2
+scrapyd==1.2.1
+scrapyd-client==1.1.0
 service-identity==18.1.0
 simplejson==3.17.0
 six==1.13.0
